recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: type mismatch;
 found   : Double
 required: Int
	case _ => current(length); avance(length) 
                          ^Tree:7: error: ambiguous reference to overloaded definition,
both method / in class Double of type (x: Char)Double
and  method / in class Double of type (x: Short)Double
match expected type ?
			droite(2.*angle); tree(steps-1,length./shrink,angle,shrink); recule(length); gauche(2.*angle)
                                                              ^Tree:8: error: ambiguous reference to overloaded definition,
both method / in class Double of type (x: Char)Double
and  method / in class Double of type (x: Short)Double
match expected type ?
			gauche(2.*angle); tree(steps-1,length./shrink,angle,shrink); recule(length); droite(2.*angle)
                                                              ^